Updated after lunch

--- a/About.html
+++ b/About.html
@@ -21,7 +21,8 @@ I am big football fan supporting Manchester United</p>
 
 
 <h2> Work Experience</h2>
-<p> Don't have much work experience but making a start</P>
+<p> I have been working since the age of 13 my job being Newspaper Distrubutior which I did for 5 years, I then moved into a new 
+field which was retial at Asda </P>
 
 <h2>Hobbies</h2>
 <p> Like to play football on a regular basis, also enjoy going to the gym but I LOVE TO EAT</P> 
