--- a/Contact.html
+++ b/Contact.html
@@ -11,6 +11,17 @@
 <p> <a href = "Project.html"> Project </a> </p>
 <p> <a href = "Skills.html"> Skills </a> </p>
 
+<form>
+  First name:<br>
+  <input type="text" name="firstname"><br>
+  Last name:<br>
+  <input type="text" name="lastname">
+   Email:<br>
+  <input type="text" name="email"><br>
+   Contact Number:<br>
+  <input type="text" name="contactname"><br>
+</form>
+
 
 
 
