--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 
 <h1>Hello World</h1>
 </head>
-<img src ="Heath-Ledger-as-The-Joker-100x100.png" alt= "Joker"> 
+
 <div class ="topnav">
 <!--Link to other pages-->
 <p> <a href = "About.html"> About Us </a> </p>
 <p> <a href = "Project.html"> Project </a> </p>
 <p> <a href = "Skills.html"> Skills </a> </p>
 <p> <a href = "Contact.html"> Contact </a> </p>
+<img src ="Me.png" alt= "Mee"> 
 <body>
 
 
