--- a/About.html
+++ b/About.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="design.css">
 <h1>About Us</h1>
 </head>
 <body>
 <div class ="topnav">
 <!--Link to other pages-->
-<p> <a href = "Index.html"> Index Us </a> </p>
+
+<p> <a href = "Index.html"> Home </a> </p>
+<a class="active" 
+href = "About.html"> About Us </a> 
+
 <p> <a href = "Project.html"> Project </a> </p>
 <p> <a href = "Skills.html"> Skills </a> </p>
+<p> <a href = "Contact.html"> Contact </a> </p>
 <h2> About Me</h2>
 
 
@@ -17,7 +23,7 @@ I am big football fan supporting Manchester United</p>
 
 <img src ="Manchester_United.png" alt= "Cresent"> 
 <h2> Education </h2>
-<p>Graduate in Computer Science in 2018 at the University of Bradford</P>
+<p>Graduate in Computer Science in 2018 at the University of Bradford 2:1 Honours</P>
 
 
 <h2> Work Experience</h2>
