--- a/Contact.html
+++ b/Contact.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="design.css">
 <h1>Contact</h1>
 </head>
 <body>
 <div class ="topnav">
 <!--Link to other pages-->
-<p> <a href = "Index.html"> Index </a> </p>
-<p> <a href = "Avout.html"> About Us </a> </p>
-<p> <a href = "Project.html"> Project </a> </p>
-<p> <a href = "Skills.html"> Skills </a> </p>
+<<a href="Index.html">Home</a>
+  <a href="About.html">About Us</a>
+  <a href="Project.html">Projects</a>
+  <a  href="Skills.html">Skills</a>
+  <a class="active"
+   href="Contact.html">Contact us</a>
 
 <form>
+
   First name:<br>
   <input type="text" name="firstname"><br>
   Last name:<br>
   <input type="text" name="lastname">
-   Email:<br>
+   Email: <br>
   <input type="text" name="email"><br>
    Contact Number:<br>
   <input type="text" name="contactname"><br>
 </form>
-
+<button type="button">Submit!</button>
 
 
 
