--- a/Skills.html
+++ b/Skills.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<h1>About Us</h1>
+<link rel="stylesheet" type="text/css" href="design.css">
+<h1>Skills</h1>
 </head>
 <body>
 <div class ="topnav">
 <!--Link to other pages-->
-<p> <a href = "Index.html"> Index Us </a> </p>
-<p> <a href = "Project.html"> Project </a> </p>
-<p> <a href = "Skills.html"> Skills </a> </p>
-<p> <a href = "Contact.html"> Contact </a> </p>
+  <a href="Index.html">Home</a>
+  <a href="About.html">About Us</a>
+  <a href="Project.html">Projects</a>
+  <a class="active"
+  href="Skills.html">Skills</a>
+  <a href="Contact.html">Contact us</a>
 
 
 
