--- a/Project.html
+++ b/Project.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="design.css">
 <h1>Projects</h1>
 </head>
 <body>
 <div class ="topnav">
 <!--Link to other pages-->
-<p> <a href = "Index.html"> Index Us </a> </p>
-<p> <a href = "About.html"> About Us </a> </p>
-<p> <a href = "Skills.html"> Skills </a> </p>
-<p> <a href = "Contact.html"> Contact </a> </p>
+  <a  href="About.html">Home</a>
+  <a href="About.html">About Us</a>
+  <a class="active" 
+  href="Project.html">Projects</a>
+  <a href="Skills.html">Skills</a>
+  <a href="Contact.html">Contact us</a>
 
 
 </body>
