--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="design.css">
 <title>My Project</title>
 
 <h1>Hello World</h1>
@@ -8,11 +9,17 @@
 
 <div class ="topnav">
 <!--Link to other pages-->
-<p> <a href = "About.html"> About Us </a> </p>
-<p> <a href = "Project.html"> Project </a> </p>
-<p> <a href = "Skills.html"> Skills </a> </p>
-<p> <a href = "Contact.html"> Contact </a> </p>
-<img src ="Me.png" alt= "Mee"> 
+<div class="topnav">
+  <a class="active" 
+  href="Index.html">Home</a>
+  <a href="About.html">About Us</a>
+  <a href="Project.html">Projects</a>
+  <a href="Skills.html">Skills</a>
+  <a href="Contact.html">Contact us</a>
+
+
+<img src ="MeE.jpg" alt= "Mee"> 
+
 <body>
 
 
