--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <a href="Contact.html">Contact us</a>
 
 
-<img src ="MeE.jpg" alt= "Mee"> 
+<img style="float:right; margin-right:0px; padding-right:0px;" img src ="MeE.jpg" alt= "Mee" height="500" width="450" /> 
 
 <body>
 
