--- a/Project.html
+++ b/Project.html
@@ -7,12 +7,15 @@
 <body>
 <div class ="topnav">
 <!--Link to other pages-->
-  <a  href="About.html">Home</a>
+  <a  href="Index.html">Home</a>
   <a href="About.html">About Us</a>
   <a class="active" 
   href="Project.html">Projects</a>
   <a href="Skills.html">Skills</a>
   <a href="Contact.html">Contact us</a>
+  
+  <p> For my final year project i worked with MATLAB the aim of the porject was the detetect diabetes using retina images and
+then the process of feature extraction. This informationn would then be put to a machine learning algorthim and make a predication  
 
 
 </body>
